force-app/main/default/objects/Booth__c/Booth__c.object-meta.xml
<CustomObject>
    <description>Custom object to represent a booth at a trade show or event. Tracks booth information, location, sponsorship level, and assigned sales representative.</description>
    <fields>
        <fullName>Name</fullName>
        <label>Booth Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Booth</label>
    <pluralLabel>Booths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>