force-app/main/default/objects/Booth__c/fields/Booth_Name__c.field-meta.xml
<CustomField>
    <fullName>Booth_Name__c</fullName>
    <label>Booth Name</label>
    <length>255</length>
    <type>Text</type>
    <description>Name of the booth at the event</description>
</CustomField>