force-app/main/default/objects/Booth__c/fields/Rep_Owner__c.field-meta.xml
<CustomField>
    <fullName>Rep_Owner__c</fullName>
    <label>Rep Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Rep_Owner</relationshipName>
</CustomField>